fix: correct OTP verification page errors

--- a/frontend/src/locales/bn/translations.json
+++ b/frontend/src/locales/bn/translations.json
@@ -17,11 +17,18 @@
     "Refresh_Feed": "রিফ্রেশ ফিড",
     "Your_Feed": "আপনার ফিড",
 
-
+    "Name": "নাম",
     "Username": "ব্যবহারকারীর নাম",
     "Email": "ইমেইল",
     "Bio": "বায়ো",
     "Location": "অবস্থান",
+    "Save": "সংরক্ষণ",
+    "DOB_msg1": "জন্ম তারিখ",
+    "DOB_msg2": "আপনার জন্ম তারিখ যোগ করুন",
+    "Edit": "সম্পাদনা",
+    "Edit_DOB_heading": "জন্ম তারিখ সম্পাদনা করবেন?",
+    "Edit_DOB_tagline": "এটি শুধুমাত্র কয়েকবার পরিবর্তন করা যেতে পারে .",
+    "Cancel": "বাতিল",
 
     "Logout": "প্রস্থান",
     "Voice": "ভয়েস",
