--- a/frontend/src/locales/hi/translations.json
+++ b/frontend/src/locales/hi/translations.json
@@ -17,10 +17,18 @@
     "Your_Feed": "आपका फ़ीड",
 
 
+    "Name": "नाम",
     "Username": "उपयोगकर्ता नाम",
     "Email": "ईमेल",
     "Bio": "जैव",
     "Location": "जगह",
+    "Save": "सेव",
+    "DOB_msg1": "जन्म की तारीख",
+    "DOB_msg2": "अपनी जन्मतिथि जोड़ें",
+    "Edit": "संपादन करना",
+    "Edit_DOB_heading": "जन्म तिथि संपादित करें?",
+    "Edit_DOB_tagline": "इसे केवल कुछ ही बार बदला जा सकता है।",
+    "Cancel": "रद्द करना",
 
     "Logout": "लॉग आउट",
     "Voice": "आवाज़",
