--- a/frontend/src/locales/ta/translations.json
+++ b/frontend/src/locales/ta/translations.json
@@ -17,11 +17,18 @@
     "Refresh_Feed": "ஊட்டத்தைப் புதுப்பிக்கவும்",
     "Your_Feed": "உங்கள் ஊட்டம்",
 
-
+    "Name": "பெயர்",
     "Username": "பயனர் பெயர்",
     "Email": "மின்னஞ்சல்",
     "Bio": "உயிர்",
     "Location": "இடம்",
+    "Save": "சேமிக்கவும்",
+    "DOB_msg1": "பிறந்த தேதி",
+    "DOB_msg2": "உங்கள் பிறந்த தேதியைச் சேர்க்கவும்",
+    "Edit": "தொகு",
+    "Edit_DOB_heading": "பிறந்த தேதியைத் திருத்தவா?",
+    "Edit_DOB_tagline": "ஒரு சில முறை மட்டுமே மாற்ற முடியும்.",
+    "Cancel": "ரத்து செய்",
 
 
     "Logout": "வெளியேறு",
